# prosessilouhinta

./: .editorconfig  .gitignore  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  gen_licenses.py  mkdocs.yml  prosessilouhinta.ABOUT  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  setup.cfg
docs/: SUMMARY.md  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  indirect-package-names.yml  mkdocs.yml  monthly-downloads.json  packaging-facts.json  third-party-fallbacks.yml  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
prosessilouhinta/: __init__.py  __main__.py  cli.py  cpa.py  prosessilouhinta.py
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: test_cli.py  test_cpa.py  test_prosessilouhinta.py
test/fixtures/basic/: cpa-micro.json  cpa-small-critical-path-nodes.json  cpa-small.json  header-only.csv  single-data-line.csv  single-too-short-data-line.csv  single-ts-format-wrong-data-line.csv  small-eventlog.csv  wun-case-two-data-lines.csv
tests/: requirements-dev.txt  requirements.txt  test_cli.py  test_prosessilouhinta.py
tests/fixtures/basic/: single-ts-format-wrong-data-line.csv  two-cases-two-data-lines.csv
