[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Process mining (Finnish prosessilouhinta) from eventlogs.
home_page = https://github.com/sthagen/prosessilouhinta

keywords =
    developer-tools
    process-mining

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = prosessilouhinta

project_urls =
    Bug Tracker = https://github.com/sthagen/prosessilouhinta/issues
    Documentation = https://sthagen.github.io/prosessilouhinta/
    Source Code = https://github.com/sthagen/prosessilouhinta

url = https://github.com/sthagen/prosessilouhinta
version = 2021.11.27


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8.13
install_requires = 
    typer >= 0.4.1
packages = find:

[options.entry_points]
console_scripts =
    prosessilouhinta = prosessilouhinta.cli:app

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pylint
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 12
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=mapology
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
